--- a/dm-template.css
+++ b/dm-template.css
@@ -1,4 +1,27 @@
 <style>
+.hrjwrap,.hrjwrap * {
+--font-size: 13px;
+
+--gradient1: #BD7F37FF;
+--gradient1-text: rgba(0, 0, 0, .9);
+ 
+--gradient2: #A13941FF;
+--gradient2-text: rgba(255, 255, 255, .9);
+ 
+--gradient: linear-gradient(135deg, var(--gradient1) 10%, var(--gradient2) 100%);
+ 
+--padding: 1rem;
+--border-round: 1rem;
+ 
+--header-text: black;
+--header-bg: url(https://cdn.discordapp.com/attachments/479534307803922454/961214631735595048/sgfsdg_1.png);
+ 
+--info-bg: rgba(0, 0, 0, .07);
+--info-border: rgba(0, 0, 0, .11);
+--info-text: #38353a;
+--info-bg-light: rgba(255,255,255, 0.03);
+}
+
 .hrjwrap {
  margin: 10px auto;
  width: 450px;
